--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,15 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
-      "src": "/",
-      "dest": "/api"
-    },
-    {
-      "src": "/sendemail",
-      "dest": "/api/sendemail"
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
     }
   ]
 }
